fixed scroll x on safari

--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,12 @@
 
   html {
     overflow-x: hidden;
+    position: relative;
   }
 
   body {
     width: 100%;
+    position: relative;
     overflow-x: hidden;
   }
 
